fix: Make Swagger UI server URL dynamic based on request context
- Remove hardcoded localhost:8080 references
- Dynamically build server URL from HttpServletRequest
- Support different schemes (http/https), ports, and context paths
- Ensures Swagger UI works correctly when accessed from different hosts or ports